# KubernetesMOOC

./: .codecov.yml  .envrc  .gitignore  .pre-commit-config.yaml  .secrets.example  AGENTS.md  HOURS.md  IMPLEMENTATION.md  IMPLEMENTATION_TODO.md  MEMOS.md  Makefile  Phase3_Implementation_Summary.md  README.md  TODO.md  azure-start.sh  azure-stop.sh  build-pp-and-lo.sh  cleanup.sh  nsa2-alb.yaml  package-lock.json
.cursor/rules/: commit-rule.mdc  documentation-rule.mdc
.github/chatmodes/: Cloud Inspector.chatmode.md  Implementer.chatmode.md  Instructor.chatmode.md  Lead Developer.chatmode.md  Mentor.chatmode.md  QA Lead.chatmode.md  Scribe.chatmode.md  The Architect.chatmode.md
.github/instructions/: md-inst.instructions.md  (+2 more)
.project/: context.template.yaml  context.yaml
auth-proxy-sidecar/: .gitignore  Dockerfile  README.md  app.py  build-and-push.sh  build.sh  dev-setup.sh  pyproject.toml  quality.sh  requirements-simple.txt  requirements.txt  test.txt
auth-proxy-sidecar/tests/: test_app.py
cluster-manifests/: README.md  agc-gateway.yaml  agc-httproute-nip-io-test.yaml  agc-httproute-template.yaml  agc-httproute.yaml  agc-test-app.yaml  argocd-application-staging.yaml  argocd-server-loadbalancer.yaml  cluster-protection-rbac.yaml  dev-alb.yaml  dev-gateway.yaml  dev-gatewayclass.yaml  k8s-nsa2-gateway.yaml  main-app.yaml
course_project/: .flake8  DOCS_ROADMAP.md  README.md  TESTING_OVERVIEW.md  build-images.sh  docker-compose.env.example  docker-compose.yaml  pyproject.toml  quality.sh  start-services.sh  test-all.sh  test-be.sh  test-fe.sh
course_project/broadcaster/: .coverage  Dockerfile  README.md  build-and-push.sh  build.sh  dev-setup.sh  pyproject.toml  quality.sh
course_project/broadcaster/src/: __init__.py  main.py
course_project/broadcaster/src/api/routes/: health.py  metrics.py
course_project/broadcaster/src/config/: settings.py
course_project/broadcaster/src/metrics/: prometheus.py
course_project/broadcaster/src/services/: broadcaster_service.py  webhook_client.py
course_project/broadcaster/tests/: TEST_PLAN.md  conftest.py
course_project/broadcaster/tests/integration/: test_container_runtime.py  test_environment_adaptation.py  test_nats_integration.py
course_project/broadcaster/tests/quality/: test_code_quality.py
course_project/broadcaster/tests/unit/: test_broadcaster_service.py  test_error_handling.py  test_metrics.py  test_settings.py  test_webhook_client.py
course_project/todo-app/: .actrc  .coverage  .dockerignore  .flake8  Dockerfile  README.md  REFACTORING_README.md  TEST_PLAN.md  main.py  main_old_monolith.py  main_refactored.py  openapi.yaml  pyproject.toml  test-ci-local.sh
course_project/todo-app/images/: metadata.txt
course_project/todo-app/manifests/: deployment.yaml  deployment.yml  persistentvolume.yaml  persistentvolumeclaim.yaml  service.yaml
course_project/todo-app/src/: main.py
course_project/todo-app/src/api/: dependencies.py
course_project/todo-app/src/api/routes/: health.py  images.py  todos.py
course_project/todo-app/src/config/: settings.py
course_project/todo-app/src/core/: cache.py  lifespan.py
course_project/todo-app/src/middleware/: security.py
course_project/todo-app/src/models/: image.py  todo.py
course_project/todo-app/src/services/: background.py  image_service.py  todo_backend_client.py  todo_service.py
course_project/todo-app/templates/: base.html  index.html
course_project/todo-app/templates/components/: error.html  todo_form.html  todo_item.html  todo_list.html
course_project/todo-app/tests/: conftest.py
course_project/todo-app/tests/container/: __init__.py  test_container_basic.py
course_project/todo-app/tests/fixtures/: todo_fixtures.py
course_project/todo-app/tests/integration/: test_base_path.py  test_health_checks.py  test_health_probes.py  test_html_responses.py  test_image_endpoints.py  test_routing_architecture.py  test_xss_security.py
course_project/todo-app/tests/unit/: test_contracts.py  test_models.py  test_todo_backend_client.py  test_todo_service.py
course_project/todo-backend/: .dockerignore  .env.example  .env.test  .flake8  Dockerfile  QA_VERIFICATION_INSTRUCTIONS.md  README.md  docker-compose.dev.yml  init.sql  pyproject.toml  start-db.sh  start-dev.sh  test-all.sh  test-pipeline.sh
course_project/todo-backend/manifests/: deployment.yaml  service.yaml
course_project/todo-backend/src/: main.py
course_project/todo-backend/src/api/: dependencies.py  error_handlers.py
course_project/todo-backend/src/api/routes/: health.py  todos.py
course_project/todo-backend/src/config/: settings.py
course_project/todo-backend/src/database/: __init__.py  connection.py  models.py  operations.py
course_project/todo-backend/src/middleware/: __init__.py  request_logging.py  security.py
course_project/todo-backend/src/models/: todo.py
course_project/todo-backend/src/services/: nats_client.py  nats_service.py  todo_service.py
course_project/todo-backend/tests/: README.md  TEST_PLAN.md  __init__.py  conftest.py
course_project/todo-backend/tests/fixtures/: todo_fixtures.py
course_project/todo-backend/tests/integration/: test_backend_routing_contract.py  test_health_checks.py  test_health_probes.py  test_information_disclosure.py  test_nats_integration.py  test_request_logging.py  test_sql_injection_prevention.py  test_todo_api_structure.py  test_todo_endpoints.py  test_xss_prevention.py
course_project/todo-backend/tests/unit/: test_models.py  test_nats_client.py  test_todo_service.py
log_output/: .gitignore  Dockerfile  Dockerfile.logserver  README.md  app.py  build.sh  docker-compose.yml  log_server.py  main.py  pyproject.toml  settings.py  test-compose.sh
ping-pong/: .flake8  Dockerfile  README.md  build.sh  database.py  docker-compose.yml  main.py  pyproject.toml  quality.sh  settings.py
scripts/: azure-start.sh  azure-stop.sh  build-images.sh  clean.sh  compose-down.sh  compose-logs.sh  compose-up.sh  db-down.sh  db-up.sh  local-dev.sh  quality.sh  test-all.sh  test-be.sh  test-e2e-local.sh  test-e2e-remote.sh  test-fe.sh
(+222 files in other folders)
